--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuanyi Wang"
-description              : "Academic homepage of Yuanyi Wang. "
+description              : "Research internship in Huawei, 2012 Lab. Intrested in Graph, Time Series, Multi-modal, and LLM"
 repository               : "wyy-code/wyy-code.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -28,7 +28,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=kmbs6HIAAAAJ&hl"
-  email            : "Lorem@ipsum.com"
+  email            : "wangyuanyi@bupt.edu.cn"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "wyy-code"
   google_plus      :
   keybase          :
   instagram        :
