--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Yuanyi Wang"
-  avatar           : "images/single_photo.png"
+  avatar           : "images/single_photo.jpg"
   bio              : "Beijing University of Posts and Telecommunications"
   location         : "Beijing, China"
   employer         :
