--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "images/single_photo.jpg"
   bio              : "Beijing University of Posts and Telecommunications"
   location         : "Guangdong, China"
-  employer         : "Looking for a PhD position in 2025 Fall in Europe!"
+  employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=kmbs6HIAAAAJ&hl"
   email            : "wangyuanyi@bupt.edu.cn"
