--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Yuanyi Wang"
   avatar           : "images/single_photo.jpg"
   bio              : "Beijing University of Posts and Telecommunications"
-  location         : "Guangdong, China"
+  location         : "Beijing, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=kmbs6HIAAAAJ&hl"
