--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuanyi Wang"
-description              : "Research internship in Huawei, 2012 Lab. Intrested in Knowledge Graph, Time Series, Multi-modal, and LLM."
+description              : "Research internship in Huawei, 2012 Lab. Intrested in Knowledge Graph, Time Series, and LLM."
 repository               : "wyy-code/wyy-code.github.io"
 google_scholar_stats_use_cdn : true
 
