--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 title                    : "Yuanyi Wang"
-description              : "Research internship in Huawei, 2012 Lab. Intrested in Knowledge Graph, Time Series, and LLM."
+description              : "Research internship in Huawei, 2012 Lab. Intrested in Knowledge Graph, Multi-modal, and LLM."
 repository               : "wyy-code/wyy-code.github.io"
-google_scholar_stats_use_cdn : true
+google_scholar_stats_use_cdn : false
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
