--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yuanyi Wang"
-description              : "PhD candidate in PolyU. Intrested in LLM Distillation, Knowledge Graph"
+description              : "PolyU PhD | Model Fusion • LLM Distillation • Entity/Graph Alignment"
 repository               : "wyy-code/wyy-code.github.io"
 google_scholar_stats_use_cdn : false
 
